changes to unify scripts